[package]
name = "dionysus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
bevy_ecs = "0.12.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlUListElement",
    "HtmlInputElement",
    "HtmlButtonElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
